# speechapi

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_compile.py  benchmark_results.txt  compose.yaml  main.py  notes.txt  pyproject.toml
docs/: docker_volumes.md  fastapi_advanced_structure.md  fastapi_depends_method.md  fastapi_singleton_and_imports.md  python_module_scope_explained.md  uv_docker_strategies.md
docs/bruno/: Health Check.yml  Local test.yml  Mao Local Health Check.yml  Mao Local test.yml  deayng7 Local test.yml  deyang7 Local Health Check.yml  opencollection.yml  wanyouwan Health Check.yml  wanyouwan test.yml
funasr_custom_arch/: model.py
funasr_custom_arch/tools/: utils.py
routers/: asr_router.py
services/: asr_service.py
utils/: downloader.py
