[project]
name = "speechapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "funasr>=1.3.1",
    "httpx>=0.28.1",
    "openai-whisper>=20250625",
    "tenacity>=9.1.4",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
